data/derived/sp14/progs/unify/prog3216.ml.out
Characters 97-99:
  (t1, (bigAdd (mulByDigit x rh) rt)::rt)
                                 ^^
Error: This expression has type int list list
       but an expression was expected of type int list
       Type int list is not compatible with type int 
